# forge

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  plugins-registry.yaml  pyproject.toml
.claude/commands/: sync-all-wrapper-plugins.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
deploy/: .dockerignore  Dockerfile.api  Dockerfile.ui  Dockerfile.worker  README.md  nginx.conf
deploy/helm/forge/: Chart.yaml  README.md  values.prod.yaml  values.yaml
deploy/helm/forge/templates/: _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap.yaml  ingress.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  serviceaccount.yaml  ui-deployment.yaml  ui-service.yaml  worker-deployment.yaml  worker-hpa.yaml
docs/: AUTHENTICATION.md  EXTERNAL_PLUGIN_GUIDE.md  NON_PYTHON_WRAPPER_GUIDE.md  WRAPPER_TEMPLATE.md
plans/: FORGE_IMPLEMENTATION_PLAN.md  FORGE_PLUGIN_DEVELOPMENT_GUIDE.md
src/forge/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_context.py  test_plugin_manager.py  test_plugin_protocol.py  test_system_deps.py
