[project]
name = "forge"
version = "0.1.0"
description = "FORGE — Chainguard Field Engineering Toolkit"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Chainguard Field Engineering" }
]
# The root "forge" package is a meta-package that depends on forge-cli
# and all plugins. This is what end users install via:
#   uv tool install forge --from git+https://github.com/chainguard/forge
dependencies = [
    "forge-cli",
    "forge-hello",  # temporary test plugin
    "forge-gauge",
    "forge-provenance",
    "forge-coverage",
    # TODO: Add when created:
    # "forge-ils",
]

[project.scripts]
forge = "forge_cli.main:main"

[tool.uv.sources]
forge-cli = { workspace = true }
forge-hello = { workspace = true }
forge-api = { workspace = true }
forge-gauge = { workspace = true }
forge-provenance = { workspace = true }
forge-coverage = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/forge-core",
    "packages/forge-cli",
    "packages/forge-api",
    "packages/forge-hello",
    "packages/forge-gauge",
    "packages/forge-provenance",
    "packages/forge-coverage",
    # TODO: Add when created:
    # "packages/forge-ils",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "forge-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
