[project]
name = "forge"
version = "0.1.0"
description = "FORGE — Chainguard Field Engineering Toolkit"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Chainguard Field Engineering" }
]
# The root "forge" package is a meta-package that depends on forge-cli
# and all plugins. This is what end users install via:
#   uv tool install forge --from git+https://github.com/chainguard/forge
dependencies = [
    "forge-cli",
    "forge-hello",  # bundled example plugin
]

[project.scripts]
forge = "forge_cli.main:main"

[tool.uv.sources]
forge-cli = { workspace = true }
forge-hello = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/forge-core",
    "packages/forge-cli",
    "packages/forge-hello",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]
